[package]
name = "kvs"
version = "0.1.0"
authors = ["Junyao Wang <junwow@amazon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_cmd = "1.0.1"
predicates = "1.0.5"
tempfile = "3.1.0"
walkdir = "2.3.1"
serde = {version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
failure = "0.1.8"
clap = "2.32.0"
regex = "1.4.1"
lazy_static = "1.4.0"